paks/booker-resources-json/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: brcj-$(.group)
  labels:
    provider: brcj-$(.group)
spec:
  ports:
  - port: 8000
  selector:
    provider: brcj-$(.group)
